ros2ws/log/build_2026-04-04_14-44-01/sketch2nav_control/stderr.log
  File "/home/pawlak/sketch2nav/ros2ws/install/sketch2nav_control/lib/python3.12/site-packages/sketch2nav_control/pure_pursuit.py", line 117
    return
    ^^^^^^
SyntaxError: 'return' outside function

